fixes gap in calendar

--- a/src/components/BookingComponent/BookingComponent.scss
+++ b/src/components/BookingComponent/BookingComponent.scss
@@ -36,7 +36,7 @@ main {
 
     @include tablet {
       .react-calendar {
-        height: 40vh;
+        height: auto;
         width: 70vh;
       }
       .react-calendar__tile {
